--- a/02/dcie/style.css
+++ b/02/dcie/style.css
@@ -143,7 +143,7 @@ footer {
     height: 2%;
     min-height: 13px;
     flex-grow: 1;
-    padding: 0 2%!important;
+    padding: 2.5% 1%!important;
     display: flex;
     justify-content: flex-end;
     justify-content: space-between;
