--- a/lin2/style.css
+++ b/lin2/style.css
@@ -42,11 +42,10 @@ header {
 
 .exit {
     width: fit-content;
-    width: fit-content;
 }
 
 
-/* main */
+/* MAIN */
 
 main {
     height: 100%;
