--- a/lin5/style.css
+++ b/lin5/style.css
@@ -112,6 +112,8 @@ main .container-lg .row .col a {
     bottom: 0;
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
     filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
     z-index: -1;
     margin: -20px;
 }
